{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 229,
  "lineage": "3001299f-4356-b712-3b7f-588e1831d851",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401637455367:internet-gateway/igw-06e820e369d977a88",
            "id": "igw-06e820e369d977a88",
            "owner_id": "401637455367",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_id": "vpc-000067a087a836454"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401637455367:loadbalancer/app/mvws92023122009554436410000000b/4b1b211a86a17cf5",
            "arn_suffix": "app/mvws92023122009554436410000000b/4b1b211a86a17cf5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mvws92023122009554436410000000b-1514074061.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401637455367:loadbalancer/app/mvws92023122009554436410000000b/4b1b211a86a17cf5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mvws92023122009554436410000000b",
            "name_prefix": "mvws9",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0145a07acf8013e83"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017434c0294f5f195"
              },
              {
                "subnet_id": "subnet-08b9721b597aaee62"
              }
            ],
            "subnets": [
              "subnet-017434c0294f5f195",
              "subnet-08b9721b597aaee62"
            ],
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_id": "vpc-000067a087a836454",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401637455367:listener/app/mvws92023122009554436410000000b/4b1b211a86a17cf5/f1f7a0c1ae3e3e70",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:401637455367:targetgroup/mvws920231220095541582600000008/5c3c142134418fca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401637455367:listener/app/mvws92023122009554436410000000b/4b1b211a86a17cf5/f1f7a0c1ae3e3e70",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:401637455367:loadbalancer/app/mvws92023122009554436410000000b/4b1b211a86a17cf5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.http",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401637455367:targetgroup/mvws920231220095541582600000008/5c3c142134418fca",
            "arn_suffix": "targetgroup/mvws920231220095541582600000008/5c3c142134418fca",
            "deregistration_delay": "0",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401637455367:targetgroup/mvws920231220095541582600000008/5c3c142134418fca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mvws920231220095541582600000008",
            "name_prefix": "mvws9",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-000067a087a836454"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06e820e369d977a88",
            "id": "r-rtb-0ddaa60f81590820f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ddaa60f81590820f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401637455367:route-table/rtb-0ddaa60f81590820f",
            "id": "rtb-0ddaa60f81590820f",
            "owner_id": "401637455367",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "multiverse-public"
            },
            "tags_all": {
              "Name": "multiverse-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-000067a087a836454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0036fa9f8e65788f4",
            "route_table_id": "rtb-0ddaa60f81590820f",
            "subnet_id": "subnet-017434c0294f5f195"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0289df24163ad6662",
            "route_table_id": "rtb-0ddaa60f81590820f",
            "subnet_id": "subnet-08b9721b597aaee62"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401637455367:security-group/sg-0145a07acf8013e83",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0145a07acf8013e83",
            "ingress": [],
            "name": "mvws9-alb20231220095541578100000005",
            "name_prefix": "mvws9-alb",
            "owner_id": "401637455367",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "multiverse-alb"
            },
            "tags_all": {
              "Name": "multiverse-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-000067a087a836454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401637455367:security-group/sg-01f66d9fb4389c3b7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01f66d9fb4389c3b7",
            "ingress": [],
            "name": "mvws9-ec220231220095541578700000006",
            "name_prefix": "mvws9-ec2",
            "owner_id": "401637455367",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "multiverse-ec2"
            },
            "tags_all": {
              "Name": "multiverse-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-000067a087a836454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_from_web_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1401454061",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0145a07acf8013e83",
            "security_group_rule_id": "sgr-0e99d1a7945aa7072",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ec2_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3178632550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0145a07acf8013e83",
            "security_group_rule_id": "sgr-0316a8d32da0b7ac9",
            "self": false,
            "source_security_group_id": "sg-01f66d9fb4389c3b7",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_from_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3339871068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f66d9fb4389c3b7",
            "security_group_rule_id": "sgr-02cc0d8da2d492c2b",
            "self": false,
            "source_security_group_id": "sg-0145a07acf8013e83",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_to_web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3002940106",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f66d9fb4389c3b7",
            "security_group_rule_id": "sgr-0f1e4b731002f5507",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401637455367:subnet/subnet-017434c0294f5f195",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017434c0294f5f195",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "401637455367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multiverse-1"
            },
            "tags_all": {
              "Name": "multiverse-1"
            },
            "vpc_id": "vpc-000067a087a836454"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401637455367:subnet/subnet-08b9721b597aaee62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b9721b597aaee62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "401637455367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multiverse-2"
            },
            "tags_all": {
              "Name": "multiverse-2"
            },
            "vpc_id": "vpc-000067a087a836454"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401637455367:vpc/vpc-000067a087a836454",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013f94a2c6db1af34",
            "default_route_table_id": "rtb-0c1ae00eb63e19c4a",
            "default_security_group_id": "sg-0e8ce565b580693a9",
            "dhcp_options_id": "dopt-02b6c2848717fa024",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000067a087a836454",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1ae00eb63e19c4a",
            "owner_id": "401637455367",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401637455367:vpc-endpoint/vpce-05981fde35286c4a9",
            "cidr_blocks": [
              "52.95.150.0/24",
              "52.95.191.0/24",
              "52.95.142.0/23",
              "16.12.16.0/23",
              "3.5.244.0/22",
              "52.219.219.0/24",
              "52.95.144.0/24",
              "52.95.148.0/23",
              "16.12.15.0/24"
            ],
            "id": "vpce-05981fde35286c4a9",
            "owner_id": "401637455367",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ca54015",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.eu-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-000067a087a836454"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}